# WET

./: .env  .flake8  README.md  READMI.md  db.sqlite3  mypy.ini  pyproject.toml  requirements.txt
myapp/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_delete_operation.py  0003_initial.py
myapp/templates/: base.html  home.html  login.html  register.html
myproject/: settings.py
