[project]
name = "wet"
version = "0.1.0"
description = ""
authors = [
    {name = "6dsfg56sfg5",email = "ilev8778@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
