[project]
name = "wet"
version = "0.1.0"
description = ""
authors = [
    {name = "6dsfg56sfg5",email = "ilev8778@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "mypy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
